attempt to fix weird bold on mobile

--- a/app/sass/_layout.scss
+++ b/app/sass/_layout.scss
@@ -1,4 +1,6 @@
-html { -webkit-text-size-adjust: none; /* prevent font scaling in landscape */ }
+html { 
+	-webkit-text-size-adjust: none;
+}
 
 .header-wrapper {
 	@include outer-container();
