--- a/app/sass/_theme.scss
+++ b/app/sass/_theme.scss
@@ -1,3 +1,6 @@
+html { 
+	-webkit-text-size-adjust: none;
+}
 body {
 	background-color: $white;
 	overflow-x: hidden;
@@ -398,9 +401,6 @@ body {
 				}
 				.fa-facebook:before {
 					content: "\f09a";
-				}
-				p {
-
 				}
 			}
 			.media {
